# ============================================================================
# Desc    : automake for src/model
# Author  : Shawn Chin
# Date    : October 2012
# License : GNU Lesser General Public License
# Copyright (c) 2012 STFC Rutherford Appleton Laboratory
# Copyright (c) 2012 University of Sheffield
# ============================================================================
# $Id$

noinst_LTLIBRARIES = lib_flame_model.la

lib_flame_model_la_LIBS     = @COMMON_LIBS@
lib_flame_model_la_LDFLAGS  = @COMMON_LDFLAGS@
lib_flame_model_la_CPPFLAGS = @COMMON_CPPFLAGS@ @AM_CPPFLAGS@
lib_flame_model_la_SOURCES  = \
  dependency.cpp \
  dependency.hpp \
  model.cpp \
  model.hpp \
  task.cpp \
  task.hpp \
  xadt.cpp \
  xadt.hpp \
  xcondition.cpp \
  xcondition.hpp \
  xfunction.cpp \
  xfunction.hpp \
  xgraph.cpp \
  xgraph.hpp \
  xioput.cpp \
  xioput.hpp \
  xmachine.cpp \
  xmachine.hpp \
  xmessage.cpp \
  xmessage.hpp \
  xmodel.cpp \
  xmodel.hpp \
  xmodel_validate.cpp \
  xmodel_validate.hpp \
  xtimeunit.cpp \
  xtimeunit.hpp \
  xvariable.cpp \
  xvariable.hpp

