# ============================================================================
# Desc    : automake for src/sim
# Author  : Shawn Chin
# Date    : October 2012
# License : GNU Lesser General Public License
# Copyright (c) 2012 STFC Rutherford Appleton Laboratory
# Copyright (c) 2012 University of Sheffield
# ============================================================================
# $Id$

noinst_LTLIBRARIES = lib_flame_sim.la

lib_flame_sim_la_LIBS     = @COMMON_LIBS@
lib_flame_sim_la_LDFLAGS  = @COMMON_LDFLAGS@
lib_flame_sim_la_CPPFLAGS = @COMMON_CPPFLAGS@ @AM_CPPFLAGS@
lib_flame_sim_la_SOURCES  = \
  sim_manager.cpp \
  sim_manager.hpp \
  simulation.cpp \
  simulation.hpp


