# ============================================================================
# Desc    : automake for headers/exceptions
# Author  : Shawn Chin
# Date    : October 2012
# License : GNU Lesser General Public License
# Copyright (c) 2012 STFC Rutherford Appleton Laboratory
# Copyright (c) 2012 University of Sheffield
# ============================================================================
# $Id$

# Header install path
library_includedir = $(pkgincludedir)/exceptions

# Headers to install
library_include_HEADERS = \
  all.hpp \
  base.hpp \
  exe.hpp \
  io.hpp \
  api.hpp \
  model.hpp \
  sim.hpp \
  mem.hpp
  

